# spondex

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  base_class.py  create_tables.sql  database_manager.py  docker-compose.prod.yml  docker-compose.yml  main.py  migrate_data.py  pyproject.toml  pytest.ini  requirements.txt  tokens.env.example
.github/actions/setup-ansible-env/: action.yml
.github/workflows/: deploy.yml  docker-image.yml  lint.yml  main-ci-cd.yml  molecule.yml  post-deploy.yml  tests.yml
ansible/: ansible-lint.yml  ansible.cfg  deploy.yml  monitoring.yml  pip-requirements.txt  post_deploy_checks.yml
ansible/roles/application_sync/defaults/: main.yml
ansible/roles/application_sync/tasks/: main.yml
ansible/roles/container_deploy/tasks/: main.yml
ansible/roles/database_setup/tasks/: main.yml
ansible/roles/monitoring/defaults/: main.yml
ansible/templates/: env.j2  spondex-monitor-config.yaml.j2  spondex-monitor.service.j2
docs/: deployment.md  monitoring.md
monitoring/: __init__.py  checks.py  config.py  config.sample.yaml  config.yaml  monitor.py  notifier.py  storage.py
scripts/: clear_playlists.py  clear_yandex_favorites.py  generate_requirements.py  spotify_auth.py  start.bat  start.sh  start_auth.bat  start_auth.sh  sync.sh
src/: base_class.py  create_tables.sql  database_manager.py  main.py  migrate_data.py  models.py  sync_helpers.py
tests/: test_helpers.py  test_monitoring_checks.py  test_notifier.py  test_status_endpoint.py  test_yandex_playlist_cleanup.py  test_yandex_search.py
(+21 files in other folders)
