[project]
name = "spondex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
"aiofiles==24.1.0",
"aiohappyeyeballs==2.4.0",
"aiohttp==3.10.5",
"aiosignal==1.3.1",
"attrs==24.2.0",
"certifi==2024.8.30",
"charset-normalizer==3.3.2",
"flask==3.0.3",
"frozenlist==1.4.1",
"idna==3.8",
"load-dotenv==0.1.0",
"multidict==6.1.0",
"PySocks==1.7.1",
"python-dotenv==1.0.1",
"redis==5.0.8",
"requests==2.32.3",
"spotipy==2.24.0",
"urllib3==2.2.3",
"uv==0.4.10",
"yandex-music==2.2.0",
"yarl==1.11.1",
"psycopg[binary]==3.2.3",
"PyYAML==6.0.2",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.4,<9",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.2",
]
